# axum_simple

./: Cargo.toml  LICENSE  README.md
axum_simple/src/db/: mod.rs  musicians.rs
axum_simple/src/handlers/: mod.rs
axum_simple/src/models/: partition.rs
axum_simple/templates/: base.html  debug.html
migrations/: 20230426153845_init.down.sql  20230426153845_init.up.sql
src/: config.rs  ctx.rs  errors.rs  globals.rs  log.rs  main.rs  print_req_res.rs  routers.rs
src/askama/: askama_tpl.rs  mod.rs
src/authentication/: auth_layer.rs  auth_middleware.rs  auth_utils.rs  jwt.rs  mod.rs  redis_session.rs
src/db/: connect.rs  genres.rs  mod.rs  musicians.rs  partitions.rs  users.rs
src/docs/: find_person_by_name_hdl.md
src/globals/: lazy_static.rs  mod.rs  once_cell.rs
src/handlers/: axum_sessions_handlers.rs  genres_handlers.rs  login_handlers.rs  logout_handlers.rs  mod.rs  musicians_handlers.rs  partitions_handlers.rs  signup_handlers.rs  utils_handlers.rs
src/models/: genre.rs  mod.rs  musician.rs  user.rs
src/sessions/: mod.rs  redis_session.rs  redis_session_layer.rs  useful_sessions.rs
templates/: 404.html  about.html  base.html  debug.html  debug_two.html  error.html  genres.html  hello.html  list_genres.html  list_partitions.html  list_persons.html  list_users.html  login.html  logout.html  partitions.html  persons.html  sign_up.html  start.html  welcome.html
tests/: quick_dev.rs
