[package]
name = "axum_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["headers", "macros", "form"]}
axum-extra = {version = "0.7.1", features = ["cookie-signed"]}
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = "0.4.11"
tower-http = { version = "0.4.0", features = ["fs", "add-extension", "trace"] }
anyhow = "1.0.65"
hyper = "0.14.20"
sqlx = { version ="0.6.2", features = ["runtime-tokio-rustls" ,"postgres","macros","uuid","time"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
serde_json = "1.0.86"
lazy_static = "1.4.0"
askama = { version = "0.12.0", features =["with-axum"]}
askama_axum = "0.3.0"
axum-flash = "0.6.0"
#tower-cookies = "0.9.0"
dotenvy = "0.15.5"
futures = "0.3.25"
async-redis-session = "0.2.2"
axum-sessions = "0.5.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
axum-core = "0.3.0-rc.2"
pbkdf2 = { version = "0.12.1", features= ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
uuid = { version = "1.3.1", features = ["serde","v4"] }
#axum-login = { version = "0.4.1", features = ["sqlx", "postgres"] }
once_cell = "1.17.1"
validator = { version = "0.16.0", features = ["derive"] }
password-auth = "0.1.0"
httpc-test = "0.1.1"
tower-cookies = "0.9.0"
async-trait = "0.1.68"
lazy-regex = "2.5.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
dotenvy_macro = "0.15.7"
redis = { version = "0.23.0", features = ["tokio-comp"] }
base64 = "0.21.0"
time = { version ="0.3.20", features = ["serde", "macros"]}

